# cgue18-stage_fighter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.lua
doc/file-formats/: Level.md
resources/: House.blend  House_1.gltf  House_2.gltf  House_3.gltf  LICENCES.md  Shield_2.blend  Sword.blend  Sword.gltf  ball.blend  ball.gltf  bullet.blend  bullet.gltf  coliseum-bullet.gltf  coliseum.blend  coliseum.gltf  cube.gltf  enemy_1.blend  enemy_1.gltf  fence.blend  fence.gltf  map.gltf  platform.gltf  platfrom_uv.xcf  question_mark.blend  question_mark.gltf  shield.blend  shield.gltf  turrent.blend  turrent.gltf  wall.blend  wall.gltf
resources/ai/: behavior.lua  index.lua  utility.lua
resources/level/: index.lua  test.lua  tutorial.lua
resources/level/tutorial/: ground.blend  ground.gltf
resources/objects/: burning_turret.lua  coliseum.lua  enemy1.lua  explosion.lua  fence.lua  house_1.lua  house_2.lua  house_3.lua  index.lua  platformX.lua  platformY.lua  question_mark.lua  rocket-smoke.lua  scriptedturret.lua  smoke.lua  turrent.lua  turret.lua  tutorial-ground.lua  wall.lua
resources/shader/: bulletdebug.frag  bulletdebug.vert  cube.frag  cube.vert  hud.frag  hud.vert  light.frag  light.vert  nuklear.frag  nuklear.vert  outlines.frag  outlines.vert  particlesystem-compute.comp  particlesystem-instanced.frag  particlesystem-instanced.geom  particlesystem-instanced.vert  particlesystem.frag  particlesystem.geom  particlesystem.vert  skybox.frag  skybox.vert  standard-instanced.frag  standard-instanced.vert  standard-splat.frag  standard-splat.vert  standard.frag  standard.vert  triangle.frag  triangle.vert
resources/texture/: explosion.xcf  explosion_2.xcf  gray_blocks.xcf  smoke.xcf  white_blocks.xcf
resources/texture/skybox/: LICENCE.txt
src/: BulletUniverse.cpp  BulletUniverse.h  Camera.cpp  Camera.h  CubemapTexture.cpp  CubemapTexture.h  GlobalGameState.cpp  GlobalGameState.h  LaunchScreen.cpp  LaunchScreen.h  Object3D.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/bullet/: GLDebugDrawer.cpp  GLDebugDrawer.h
src/controller/: CameraController.cpp  CameraController.h
src/entity/: AbstractScriptedObject.h  BulletEntity.cpp  BulletEntity.h  CameraEntity.cpp  CameraEntity.h  CubeEntity.cpp  CubeEntity.h  EnemyEntity.cpp  EnemyEntity.h  Entity.h  InstancedProjectile.cpp  InstancedProjectile.h  Player.cpp  Player.h  ScriptedEntity.cpp  ScriptedEntity.h  ScriptedObject.cpp  ScriptedObject.h
src/helper/: Callback.h  CompilerMacros.h  Font.cpp  Font.h  ImageGenerator.cpp  ImageGenerator.h  Logger.h  QuatUtils.h
src/level/: Level.cpp  Level.h  LuaClassWrapper.h
src/manager/: AudioManager.cpp  AudioManager.h  FontManager.cpp  FontManager.h  MenuManager.cpp  MenuManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/object3d/: BulletObject.cpp  BulletObject.h  Cube.cpp  Cube.h  Light.h  Model3DObject.cpp  Model3DObject.h  Object3D.cpp  Object3D.h  ParticleSystem.cpp  ParticleSystem.h  Skybox.cpp  Skybox.h  StaticBulletModelObject.cpp  StaticBulletModelObject.h  Triangle.cpp  Triangle.h  Trigger.cpp  Trigger.h
src/object3d/particlesystem/: ScriptedParticleSystem.cpp  ScriptedParticleSystem.h
src/widget/: BackToMenuWindow.cpp  BackToMenuWindow.h  DebugTextHud.cpp  DebugTextHud.h  GameMenu.cpp  GameMenu.h  HelpMenu.cpp  HelpMenu.h  Image.cpp  Image.h  Label.cpp  Label.h  LevelSelectMenu.cpp  LevelSelectMenu.h  NuklearCtx.cpp  NuklearCtx.h  PlayerHud.cpp  PlayerHud.h  SettingsMenu.cpp  SettingsMenu.h  TextBoxWindow.cpp  TextBoxWindow.h  Widget.h
